  * List assigned scripts as colored tooltip when hovering mouse over the
    "Scripts" column in the instruments list.
  * Added global keyboard accelerator Shift + Backspace for dropping all script
    slots from an instrument.
  * Added option to save as gig v4 file (File -> Properties).
  * Fixed duplicate items in File -> Properties -> "File Format" combo box.

Version 1.1.0 (2017-11-25)

  * allow building with G/GDK/GTK_DISABLE_DEPRECATED
  * fixed building without linuxsampler on Mac
  * fixed some compiler and cppcheck warnings
  * synthesis paremeter page tabs are now scrollable (fixes an issue with
    GTK 3: default theme uses huge tabs which breaks the overall layout on
    average window sizes)
  * Automake: set environment variable GCC_COLORS=auto to allow GCC to
    auto detect whether it (sh/c)ould output its messages in color.
  * NKSP Editor: Added support for liblinuxsampler's NKSP syntax
    highlighting backend.
  * Script Editor: Some color tweaks (using now same text colors as on
    the NKSP refrence documentation website).
  * Script Editor: Added support for liblinuxsampler's NKSP parser
    backend for displaying parser errors and warnings directly within
    the source code.
  * User settings are now automatically saved and restored.
  * Automatically save & restore window size and position.
  * Script Editor: Show precise parser error/warning messages as tooltip
    when the mouse points over the respective location in the script's
    source code.
  * Script Editor: Show a question dialog to the user when the editor is
    to be closed and the script changes have not been applied yet.
  * Script Editor: Added status bar at the bottom of the script editor
    window showing the amount (if any) of errors and warnings.
  * Script Editor: Added menu bar and two initial entries: "Apply" (Ctrl-S)
    and "Close" (Ctrl-Q).
  * Script Editor: if editor is used in live-mode, inform the sampler that