@@ -14,6 +14,10 @@ Version SVN trunk (?)
     slots from an instrument.
   * Added option to save as gig v4 file (File -> Properties).
   * Fixed duplicate items in File -> Properties -> "File Format" combo box.
+  * GIG SOUND FORMAT EXTENSION: Added combo box "Sustain Release Trigger" which
+    can be used to optionally play release trigger samples on sustain pedal up.
+  * GIG SOUND FORMAT EXTENSION: Added check box "No note-off release trigger"
+    which allows to disable release trigger samples on regular MIDI note-off.
 
 Version 1.1.0 (2017-11-25)
 
